--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         <h6>Wednesday 9am-7:30pm</h6>
                         <h6>Thursday 9am-5pm</h6>
                         <h6>Friday 9am-6pm</h6>
-                        <h6>Saturday 9am-1pm</h6>
+                        <h6>Saturday CLOSED</h6>
                         <h6>Sunday CLOSED</h6>
                         <br />
                         <h6>Call for doctors hours</h6>
