--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div>
                         <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=401+Valley+View+Rd+El+Sobrante,+CA+94803&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=37.735377,86.572266&amp;vpsrc=0&amp;ie=UTF8&amp;hq=&amp;hnear=401+Valley+View+Rd,+El+Sobrante,+California+94803&amp;t=m&amp;ll=37.978101,-122.29517&amp;spn=0.020297,0.025749&amp;z=14&amp;iwloc=A&amp;output=embed"
                             frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="200" height="200"></iframe>
-                        <div id="yelp-biz-badge-plain-fNybXwYNND9B5udgye68lA"><a href="http://yelp.com/biz/el-sobrante-veterinary-hospital-el-sobrante?utm_medium=badge_button&amp;utm_source=biz_review_badge"
+                        <div id="yelp-biz-badge-plain-fNybXwYNND9B5udgye68lA"><a href="https://yelp.com/biz/el-sobrante-veterinary-hospital-el-sobrante?utm_medium=badge_button&amp;utm_source=biz_review_badge"
                                 target="_blank">Check out El Sobrante Veterinary Hospital on Yelp</a></div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <h6>Wednesday 9am-7:30pm</h6>
                     <h6>Thursday 9am-5pm</h6>
                     <h6>Friday 9am-6pm</h6>
-                    <h6>Saturday 9am-1pm</h6>
+                    <h6>Saturday CLOSED</h6>
                     <h6>Sunday CLOSED</h6>
                     <br />
                     <h6>Call for doctors hours</h6>
@@ -138,7 +138,7 @@
 
                 <div class=col-lg-4>
                     <h4 class="title">Emergency Care</h4>
-                    <h6><a href="https://www.sagecenters.com/contact-us/">Sage Emergency</a><a href="http://sagecenters.com/concord/">:
+                    <h6><a href="https://www.sagecenters.com/contact-us/">Sage Emergency</a><a href="https://sagecenters.com/concord/">:
                             Concord Center</a></h6>
                     <address>
                         <h6>1410 Monument Blvd, Suite 8 <br /> Concord, CA <br /> Phone: 925-627-7243</h6>
