updated portfolio link

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a></div>
+        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a></div>
 
     </div>
     
