--- a/resources.html
+++ b/resources.html
@@ -84,7 +84,7 @@
 <h5><a href="http://www.vetmed.ucdavis.edu/vmth/small_animal/internal_medicine/vaccination_protocols.cfm" target="_blank">UC Davis Vaccine Protocols</a></h5>
                     </div>
 
-                    <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a></div>
+                    <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a></div>
 
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
