--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@
             <h5>Purina Veterinary Diets</h5>
         </div>
 
-        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a></div>
+        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a></div>
 
     </div>
 
