--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="text-right">
-            <hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a></div>
+            <hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a></div>
 
     </div>
 
