--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
         <!-- end #service -->
 
-        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a></div>
+        <div class="text-right"><hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a></div>
 
     </div>
     <!-- end #featured -->
