--- a/recommended-emergency-care.html
+++ b/recommended-emergency-care.html
@@ -108,7 +108,7 @@
         </div>
 
         <div class="text-right">
-            <hr>&copy; <a href="https://mougatrah.github.io/Responsive-Portfolio/index.html" target="_blank">Phelan McCall</a>
+            <hr>&copy; <a href="https://mougatrah.github.io/portfolio/index.html" target="_blank">Phelan McCall</a>
         </div>
 
     </div>
